# Estrutura-De-Dados

./: README.md
Analize de Complexidade/: Analize de Complexidade.odt
Arvore AVL/: NoAVL.hpp
Arvore Binária de Busca com Percursos/: arvorebinaria.hpp
Fila Encadeada/: FilaEnc.hpp  ListaEnc.hpp
Fila de Vetor/: Fila.hpp
Lista Circular Dupla/: ElementoDuplo.hpp  ListaDuplaCirc.hpp
Lista Circular Simples/: Elemento.hpp  ListaCirc.hpp
Lista Duplamente Encadeada/: ListaDupla.hpp
Lista Encadeada/: Elemento.hpp  ListaEnc.hpp
Lista de Vetor/: Lista.hpp
Pilha Encadeada/: ListaEnc.hpp  PilhaEnc.hpp
Pilha de Vetor/: Pilha.hpp
Trabalho 1 - Carros/: AVL.txt  CMakeLists.txt  Carro.hpp  Elemento.hpp  Eventos.hpp  Fila.hpp  Lista.hpp  ListaCirc.hpp  ListaEnc.hpp  Pista.hpp  Relogio.hpp  Semaforo.hpp  Sistema.hpp  main.cpp
Trabalho 2 - Árvore em Disco/: main.cpp
Trabalho 2 - Árvore em Disco/Estruturas/: Lista.hpp  NoAVL.hpp
Trabalho 2 - Árvore em Disco/Utils/: Finder.hpp  Indexer.hpp  Reader.hpp  Reg.hpp  Word.hpp  word_helper.hpp
